--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -158,7 +158,7 @@
     </style>
 
     <style name="ExchangeRateText.Primary" >
-        <item name="android:textColor">?textColorNormal</item>
+        <item name="android:textColor">?textColorSecondary</item>
     </style>
 
     <style name="ExchangeRateText.Secondary">
