dark theme toggle with fade transition

--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -86,7 +86,7 @@
             />
 
         <TextView
-            style="@style/ExchangeRateText"
+            style="@style/ExchangeRateText.Primary"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
