--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,9 @@
 <resources>
+    <style name="WindowAnimationTransition">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
+
     <style name="Fab" parent="Widget.MaterialComponents.FloatingActionButton">
         <item name="android:backgroundTint">?attr/colorAccent</item>
         <item name="rippleColor">@color/fab_ripple_light</item>
@@ -158,7 +163,7 @@
     </style>
 
     <style name="ExchangeRateText.Primary" >
-        <item name="android:textColor">?textColorSecondary</item>
+        <item name="android:textColor">?textColorPrimary</item>
     </style>
 
     <style name="ExchangeRateText.Secondary">
