--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#673ab7</color> <!-- Deep Purple 500 -->
-    <color name="colorPrimaryDark">#320b86</color>
-    <color name="colorAccent">#ffc107</color> <!-- Amber 500 -->
+    <color name="color_primary">#673ab7</color> <!-- Deep Purple 500 -->
+    <color name="color_primary_dark">#320b86</color>
+    <color name="color_accent">#ffc107</color> <!-- Amber 500 -->
 
-    <color name="fab_background">@color/colorAccent</color>
+    <color name="fab_background">@color/color_accent</color>
     <color name="fab_ripple_light">#2fff</color>
 
     <color name="white">#FFFFFF</color>
