fix swipe to delete icon showing over item

--- a/app/src/main/res/drawable/divider_thin.xml
+++ b/app/src/main/res/drawable/divider_thin.xml
@@ -6,7 +6,7 @@
     <size android:height="1px" />
 
     <solid
-        android:color="?attr/dividerColor"
+        android:color="?dividerColor"
         />
 
 </shape>
