--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="color_primary">#673ab7</color> <!-- Deep Purple 500 -->
     <color name="color_primary_dark">#320b86</color>
+    <!-- dummy fallback color, only needed in night version -->
+    <color name="color_primary_light">#9a67ea</color>
     <color name="color_accent">#ffc107</color> <!-- Amber 500 -->
 
     <color name="fab_background">@color/color_accent</color>
@@ -15,14 +17,7 @@
 
     <color name="dark_window_background">#212121</color>
 
-    <color name="light_text_primary">#424242</color>
-    <color name="light_text_secondary">#8D8D8D</color>
-
-    <color name="dark_text_primary">#eeeeee</color>
-    <color name="dark_text_secondary">#bcbcbc</color>
-
-    <color name="light_selected_item">#eeeeee</color>
-    <color name="dark_selected_item">#424242</color>
+    <!--<color name="selected_item">#eeeeee</color>-->
 
     <color name="error_red">#f44336</color> <!-- Red 500 -->
 
