--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,7 +2,15 @@
 <resources>
     <color name="color_primary">#4527a0</color> <!-- Deep purple 800  -->
     <color name="color_primary_dark">#000070</color>
+    <color name="color_primary_light">#7953d2</color>
     <color name="color_accent">#ffc107</color> <!-- Amber 500 -->
 
     <color name="fab_background">#ffa000</color> <!-- Amber 700 -->
+
+    <!--<color name="selected_item">#424242</color>-->
+
+    <color name="dashboard_graph_bar">#5EA4E2</color>
+    <color name="dashboard_graph_bar_req">#D35454</color>
+    <color name="dashboard_tooltip">#bbdefb</color>
+    <color name="dashboard_tooltip_req">#C62828</color>
 </resources>
