--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -88,7 +88,7 @@
     <!-- For text date dividers in lists -->
     <style name="ListSectionDividerText">
         <item name="android:textAllCaps">true</item>
-        <item name="android:textColor">?colorPrimary</item>
+        <item name="android:textColor">?attr/textColorEmphasis</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
     </style>
@@ -165,7 +165,7 @@
     </style>
 
     <style name="ExchangeRateText.Secondary">
-        <item name="android:textColor">?colorPrimary</item>
+        <item name="android:textColor">?textColorEmphasis</item>
     </style>
 
     <style name="ExchangeCurrentCurrency">
