--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,7 @@
         <item name="textColorSecondary">@color/medium_dark_grey</item>
         <item name="android:textColorPrimary">?textColorPrimary</item>
         <item name="android:textColorSecondary">?textColorSecondary</item>
+        <item name="textColorEmphasis">?colorPrimary</item>
 
         <!-- Error color eg for error text on inputs -->
         <item name="colorError">@color/error_red</item>
@@ -34,7 +35,7 @@
         <item name="dialogTitleStyle">@style/DialogTitle</item>
 
         <!-- Generic background color for selected items eg current tab in nav drawer -->
-        <item name="selectedItemBackgroundColor">@color/light_selected_item</item>
+        <item name="selectedItemBackgroundColor">@color/light_grey</item>
 
         <!-- List divider color -->
         <item name="dividerColor">@color/medium_dark_grey</item>
