--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -20,7 +20,7 @@
         <item name="android:windowBackground">@color/window_background</item>
 
         <!-- Dialog background color -->
-        <item name="colorBackgroundFloating">?android:windowBackground</item>
+        <item name="colorBackgroundFloating">@color/window_background</item>
 
         <!-- Action bar -->
         <item name="actionBarStyle">@style/Widget.MaterialComponents.ActionBar.Primary</item>
@@ -57,10 +57,6 @@
         <item name="dashboardGraphReqBarColor">@color/dashboard_graph_bar_req</item>
         <item name="dashboardReqTooltipColor">@color/dashboard_tooltip_req</item>
         <item name="dashboardReqTooltipTextColor">@color/white</item>
-
-
-
-        <!--<item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>-->
     </style>
 
 </resources>
