--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- App colors -->
-        <item name="colorPrimary">@color/color_primary</item>
-        <item name="colorPrimaryDark">@color/color_primary_dark</item>
-        <item name="colorAccent">@color/color_accent</item>
-
+    <style name="AppTheme" parent="BaseTheme">
         <!-- Text -->
         <item name="textColorPrimary">@color/light_grey</item>
         <item name="textColorSecondary">@color/medium_light_grey</item>
@@ -13,33 +8,12 @@
         <item name="android:textColorSecondary">?textColorSecondary</item>
         <item name="textColorEmphasis">@color/color_primary_light</item>
 
-        <!-- Error color eg for error text on inputs -->
-        <item name="colorError">@color/error_red</item>
-
-        <!-- Background of activities/fragments -->
-        <item name="android:windowBackground">@color/window_background</item>
-
-        <!-- Dialog background color -->
-        <item name="colorBackgroundFloating">@color/window_background</item>
-
         <!-- Action bar -->
         <item name="actionBarStyle">@style/Widget.MaterialComponents.ActionBar.Primary</item>
         <item name="actionBarTheme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
         <!-- Actionbar overflow menus -->
         <item name="menuPopupOverlay">@style/Theme.MaterialComponents.NoActionBar</item>
         <item name="actionBarPopupTheme">?menuPopupOverlay</item>
-
-        <!-- Views throughout app -->
-        <item name="floatingActionButtonStyle">@style/Fab</item>
-        <!-- For text input layouts throughout app -->
-        <item name="textInputStyle">@style/AppTextInputLayout</item>
-
-        <!-- Nav drawer -->
-        <item name="navDrawerBackgroundColor">?android:windowBackground</item>
-        <item name="navDrawerItemStyle">@style/NavDrawerItem</item>
-
-        <!-- Text style for dialog titles -->
-        <item name="dialogTitleStyle">@style/DialogTitle</item>
 
         <!-- Generic background color for selected items eg current tab in nav drawer -->
         <item name="selectedItemBackgroundColor">@color/dark_grey</item>
