--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,7 +8,7 @@
         <item name="android:textColorSecondary">?textColorSecondary</item>
         <item name="textColorEmphasis">@color/color_primary_light</item>
 
-        <!-- Action bar -->
+        <!-- UndoableAction bar -->
         <item name="actionBarStyle">@style/Widget.MaterialComponents.ActionBar.Primary</item>
         <item name="actionBarTheme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
         <!-- Actionbar overflow menus -->
