--- a/app/src/main/res/menu/fragment_dashboard.xml
+++ b/app/src/main/res/menu/fragment_dashboard.xml
@@ -17,6 +17,10 @@
                     android:title="@string/action_sort_by_name"
                     />
 
+                <item android:id="@+id/action_sort_by_amount"
+                    android:title="@string/action_sort_by_amount"
+                    />
+
                 <item android:id="@+id/action_sort_by_meat_type"
                     android:title="@string/action_sort_by_meat_type"
                     />
