dashboard sort by

--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -21,6 +21,7 @@
     <string name="pref_backup_db">backup_db</string>
     <string name="pref_restore_db">restore_db</string>
 
+    <string name="pref_dashboard_sort_by">dashboard_sort_by</string>
     <string name="pref_products_sort_by">products_sort_by</string>
 
     <string name="pref_exchange_currency_primary">exchange_currency_primary</string>
