--- a/app/src/main/res/layout/activity_edit_locations.xml
+++ b/app/src/main/res/layout/activity_edit_locations.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="@dimen/screen_margin_top"
         android:layout_marginEnd="@dimen/screen_margin_horizontal"
         android:orientation="vertical"
-        tools:context=".stock.EditLocationsActivity"
+        tools:context=".stock.NewLocationActivity"
         >
 
         <com.google.android.material.textfield.TextInputLayout
@@ -33,6 +33,7 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- todo make this a dropdown rather than an edit text -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_location_type"
             android:layout_width="match_parent"
