--- a/app/src/main/res/menu/fragment_stock.xml
+++ b/app/src/main/res/menu/fragment_stock.xml
@@ -7,15 +7,44 @@
         android:id="@+id/action_undo"
         android:title="@string/action_undo"
         android:icon="@drawable/ic_undo"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         />
 
     <item
         android:id="@+id/action_redo"
         android:title="@string/action_redo"
         android:icon="@drawable/ic_redo"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         />
+
+    <item
+        android:id="@+id/action_sort_by"
+        android:title="@string/action_sort_by"
+        android:icon="@drawable/ic_sort"
+        app:showAsAction="ifRoom"
+        >
+        <menu>
+            <group android:id="@+id/group_sort_by"
+                android:checkableBehavior="single">
+
+                <item android:id="@+id/action_sort_by_name"
+                    android:title="@string/action_sort_by_name"
+                    />
+
+                <item android:id="@+id/action_sort_by_location"
+                    android:title="@string/action_sort_by_location"
+                    />
+
+                <item android:id="@+id/action_sort_by_amount_desc"
+                    android:title="@string/action_sort_by_amount_desc"
+                    />
+
+                <item android:id="@+id/action_sort_by_amount_asc"
+                    android:title="@string/action_sort_by_amount_asc"
+                    />
+            </group>
+        </menu>
+    </item>
 
     <item
         android:id="@+id/action_edit_products"
