--- a/app/src/main/res/layout/activity_location_detail.xml
+++ b/app/src/main/res/layout/activity_location_detail.xml
@@ -20,6 +20,7 @@
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
         tools:text="Location name"
+        android:textColor="?textColorPrimary"
         />
 
     <TextView
