--- a/app/src/main/res/layout/item_stock.xml
+++ b/app/src/main/res/layout/item_stock.xml
@@ -8,6 +8,7 @@
     android:paddingTop="16dp"
     android:paddingEnd="24dp"
     android:paddingBottom="16dp"
+    android:id="@+id/stock_item_layout"
     >
 
     <RelativeLayout
