--- a/app/src/main/res/menu/activity_stock_detail.xml
+++ b/app/src/main/res/menu/activity_stock_detail.xml
@@ -10,4 +10,11 @@
         app:showAsAction="ifRoom"
         />
 
+    <item
+        android:id="@+id/action_edit"
+        android:icon="@drawable/ic_edit"
+        android:title="@string/action_edit"
+        app:showAsAction="ifRoom"
+        />
+
 </menu>
