--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -67,6 +67,11 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="AppTheme.FadeTransition">
-        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+        <!--<item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>-->
+
+        <item name="android:windowActivityTransitions">true</item>
+
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
 </resources>
