--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/screen_margin_horizontal"
             android:layout_marginEnd="@dimen/screen_margin_horizontal"
+            android:paddingBottom="16dp"
             android:orientation="vertical"
             >
 
