--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -49,4 +49,14 @@
         tools:text="12 September 2019, 12:00"
         />
 
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/checkbox_completed"
+        style="@style/TextNormal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:text="@string/orders_input_completed"
+        />
+
 </LinearLayout>
