--- a/app/src/main/res/layout/activity_edit_stock.xml
+++ b/app/src/main/res/layout/activity_edit_stock.xml
@@ -17,6 +17,20 @@
         android:orientation="vertical"
         >
 
+        <TextView
+            android:id="@+id/text_product"
+            style="@style/InputFormText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/input_spacing_vertical"
+            android:drawableStart="@drawable/ic_name"
+            android:drawablePadding="16dp"
+            android:textColor="?textColorPrimary"
+            android:visibility="gone"
+            tools:text="Beef hearts"
+            tools:visibility="visible"
+            />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_product"
             style="@style/AppTextInputLayout.Searchable"
