--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -4,125 +4,143 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
     android:orientation="vertical"
     >
 
-    <!-- top row with primary and secondary currencies, swap btn -->
     <LinearLayout
-        android:id="@+id/current_currencies"
+        android:id="@+id/rates_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="vertical"
         >
 
-        <NumberPicker
-            android:id="@+id/currency_picker_left"
-            android:layout_width="wrap_content"
+        <!-- top row with primary and secondary currencies, swap btn -->
+        <LinearLayout
+            android:id="@+id/current_currencies"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+
+            <NumberPicker
+                android:id="@+id/currency_picker_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+            <TextView
+                android:id="@+id/currency_primary"
+                style="@style/ExchangeCurrentCurrency"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="end|center_vertical"
+                tools:text="GBP"
+                />
+
+            <ImageButton
+                android:id="@+id/swap_currencies"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="?selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="8dp"
+                app:srcCompat="@drawable/ic_swap"
+                />
+
+            <TextView
+                android:id="@+id/currency_secondary"
+                style="@style/ExchangeCurrentCurrency"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="start|center_vertical"
+                tools:text="HKD"
+                />
+
+            <NumberPicker
+                android:id="@+id/currency_picker_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
+
+        <!-- main view showing current rate -->
+        <LinearLayout
+            android:id="@+id/rate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+
+            <EditText
+                android:id="@+id/currency_primary_value"
+                style="@style/ExchangeRateText.Primary"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/transparent"
+                android:gravity="center_vertical|end"
+                android:imeOptions="actionDone"
+                android:inputType="numberDecimal"
+                android:text="@string/exchange_primary_start_value"
+                />
+
+            <TextView
+                style="@style/ExchangeRateText.Primary"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:text="@string/exchange_currency_separator"
+                />
+
+            <TextView
+                android:id="@+id/currency_secondary_value"
+                style="@style/ExchangeRateText.Secondary"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="start|center_vertical"
+                android:maxLines="1"
+                tools:text="2.35"
+                />
+
+        </LinearLayout>
+
+        <com.martinwalls.nea.components.CustomRecyclerView
+            android:id="@+id/exchange_history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:overScrollMode="never"
             />
 
         <TextView
-            android:id="@+id/currency_primary"
-            style="@style/ExchangeCurrentCurrency"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="end|center_vertical"
-            tools:text="GBP"
-            />
-
-        <ImageButton
-            android:id="@+id/swap_currencies"
-            android:layout_width="wrap_content"
+            android:id="@+id/no_exchange_history"
+            style="@style/ExchangeHistoryItemText"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="?selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="8dp"
-            app:srcCompat="@drawable/ic_swap"
-            />
-
-        <TextView
-            android:id="@+id/currency_secondary"
-            style="@style/ExchangeCurrentCurrency"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="start|center_vertical"
-            tools:text="HKD"
-            />
-
-        <NumberPicker
-            android:id="@+id/currency_picker_right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-    </LinearLayout>
-
-    <!-- main view showing current rate -->
-    <LinearLayout
-        android:id="@+id/rate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-
-        <EditText
-            android:id="@+id/currency_primary_value"
-            style="@style/ExchangeRateText.Primary"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/transparent"
-            android:gravity="center_vertical|end"
-            android:imeOptions="actionDone"
-            android:inputType="numberDecimal"
-            android:text="@string/exchange_primary_start_value"
-            />
-
-        <TextView
-            style="@style/ExchangeRateText.Primary"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
             android:gravity="center"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:text="@string/exchange_currency_separator"
+            android:text="@string/exchange_no_history"
+            android:visibility="gone"
             />
-
-        <TextView
-            android:id="@+id/currency_secondary_value"
-            style="@style/ExchangeRateText.Secondary"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="start|center_vertical"
-            android:maxLines="1"
-            tools:text="2.35"
-            />
-
     </LinearLayout>
-
-    <com.martinwalls.nea.components.CustomRecyclerView
-        android:id="@+id/exchange_history"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:overScrollMode="never"
-        />
 
     <TextView
-        android:id="@+id/no_exchange_history"
-        style="@style/ExchangeHistoryItemText"
+        android:id="@+id/empty"
+        style="@style/EmptyView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/exchange_no_history"
+        android:text="@string/exchange_loading"
         android:visibility="gone"
         />
 
