--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -31,7 +31,7 @@
 
     <TextView
         android:id="@+id/empty"
-        style="@style/TextNormal"
+        style="@style/EmptyView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
