--- a/app/src/main/res/layout/item_stock.xml
+++ b/app/src/main/res/layout/item_stock.xml
@@ -38,6 +38,8 @@
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             tools:text="UK1535"
+            android:ellipsize="end"
+            android:maxLines="1"
             />
 
     </RelativeLayout>
