--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -172,13 +172,31 @@
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/checkbox_completed"
-                style="@style/TextNormal"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/orders_input_completed"
-                />
+                android:orientation="horizontal"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TextNormal"
+                    android:text="@string/orders_input_completed"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="16dp"
+                    />
+
+                <CheckBox
+                    android:id="@+id/checkbox_completed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    />
+
+            </LinearLayout>
 
         </LinearLayout>
 
