--- a/app/src/main/res/layout/activity_new_contract.xml
+++ b/app/src/main/res/layout/activity_new_contract.xml
@@ -162,6 +162,7 @@
                 android:layout_marginEnd="4dp"
                 android:orientation="horizontal"
                 android:visibility="gone"
+                tools:visibility="visible"
                 >
 
                 <TextView
