--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -49,14 +49,30 @@
         tools:text="12 September 2019, 12:00"
         />
 
-    <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/checkbox_completed"
-        style="@style/TextNormal"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:text="@string/orders_input_completed"
-        />
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/DetailsText"
+            android:text="@string/orders_input_completed"
+            android:paddingStart="64dp"
+            android:paddingEnd="16dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            />
+
+        <CheckBox
+            android:id="@+id/checkbox_completed"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            />
+
+    </LinearLayout>
 
 </LinearLayout>
