--- a/app/src/main/res/menu/activity_contract_detail.xml
+++ b/app/src/main/res/menu/activity_contract_detail.xml
@@ -4,6 +4,13 @@
     >
 
     <item
+        android:id="@+id/action_delete"
+        android:icon="@drawable/ic_delete"
+        android:title="@string/action_delete"
+        app:showAsAction="ifRoom"
+        />
+
+    <item
         android:id="@+id/action_edit"
         android:icon="@drawable/ic_edit"
         android:title="@string/action_edit"
