--- a/app/src/main/res/layout/activity_new_contract.xml
+++ b/app/src/main/res/layout/activity_new_contract.xml
@@ -23,66 +23,84 @@
             android:orientation="vertical"
             >
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/input_layout_product"
-                style="@style/AppTextInputLayout.Searchable"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/input_spacing_vertical"
-                android:hint="@string/contracts_input_product"
+                android:id="@+id/product_inputs"
+                android:orientation="vertical"
                 >
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_text_product"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/input_layout_product"
+                    style="@style/AppTextInputLayout.Searchable"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:imeOptions="actionDone"
-                    android:inputType="textCapWords"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <LinearLayout
-                android:id="@+id/input_row_quantity"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/input_spacing_vertical"
-                android:orientation="horizontal"
-                >
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/input_layout_quantity_mass"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/input_spacing_horizontal"
-                    android:layout_weight="1"
-                    android:hint="@string/contracts_input_quantity_kg"
+                    android:layout_marginTop="@dimen/input_spacing_vertical"
+                    android:hint="@string/contracts_input_product"
                     >
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edit_text_quantity_mass"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:imeOptions="actionNext"
-                        android:inputType="numberDecimal"
-                        />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/input_layout_quantity_boxes"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="@string/contracts_input_quantity_boxes"
-                    >
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edit_text_quantity_boxes"
+                        android:id="@+id/edit_text_product"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="actionDone"
-                        android:inputType="number"
+                        android:inputType="textCapWords"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <LinearLayout
+                    android:id="@+id/input_row_quantity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/input_spacing_vertical"
+                    android:orientation="horizontal"
+                    >
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/input_layout_quantity_mass"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/input_spacing_horizontal"
+                        android:layout_weight="1"
+                        android:hint="@string/contracts_input_quantity_kg"
+                        >
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_text_quantity_mass"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:imeOptions="actionNext"
+                            android:inputType="numberDecimal"
+                            />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/input_layout_quantity_boxes"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:hint="@string/contracts_input_quantity_boxes"
+                        >
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_text_quantity_boxes"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:imeOptions="actionDone"
+                            android:inputType="number"
+                            />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <ImageButton
+                        android:id="@+id/product_btn_done"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="4dp"
+                        android:background="?selectableItemBackgroundBorderless"
+                        android:padding="4dp"
+                        app:srcCompat="@drawable/ic_done"
+                        />
+                </LinearLayout>
             </LinearLayout>
 
             <TextView
