--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -6,6 +6,11 @@
     <string name="pref_last_opened_page">last_opened_page</string>
 
     <string name="pref_mass_unit">mass_unit</string>
+    <string-array name="pref_mass_unit_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <string name="pref_dark_theme">dark_theme</string>
     <string-array name="pref_dark_theme_entries">
         <item>Light</item>
