--- a/app/src/main/res/menu/activity_choose_currencies.xml
+++ b/app/src/main/res/menu/activity_choose_currencies.xml
@@ -4,6 +4,14 @@
     >
 
     <item
+        android:id="@+id/search"
+        android:title="@string/search_title"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.widget.SearchView"
+        />
+
+    <item
         android:id="@+id/action_done"
         android:title="@string/action_done"
         android:icon="@drawable/ic_done"
