--- a/app/src/main/res/menu/activity_choose_currencies.xml
+++ b/app/src/main/res/menu/activity_choose_currencies.xml
@@ -4,11 +4,11 @@
     >
 
     <item
-        android:id="@+id/search"
+        android:id="@+id/action_search"
         android:title="@string/search_title"
         android:icon="@drawable/ic_search"
         app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="android.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         />
 
     <item
