--- a/app/src/main/res/layout/item_dashboard_location.xml
+++ b/app/src/main/res/layout/item_dashboard_location.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/name"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     android:background="@drawable/outline_rounded"
     android:paddingStart="12dp"
     android:paddingTop="8dp"
     android:paddingEnd="12dp"
     android:paddingBottom="8dp"
     android:textAllCaps="true"
+    android:textColor="@color/filter_item_text_color"
     android:textStyle="bold"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
     tools:text="all"
     />
