--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     >
 
@@ -12,14 +12,6 @@
     <!--android:layout_height="match_parent"-->
     <!--/>-->
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_location"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:overScrollMode="never"
-        tools:listitem="@layout/item_dashboard_location"
-        tools:itemCount="1"
-        />
 
     <ScrollView
         android:id="@+id/graph_layout"
@@ -28,15 +20,33 @@
         android:scrollbars="none"
         >
 
-        <com.martinwalls.nea.ui.dashboard.BarChartView
-            android:id="@+id/graph"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:paddingTop="8dp"
-            />
+            android:orientation="vertical"
+            >
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_locations"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                android:overScrollMode="never"
+                tools:itemCount="1"
+                tools:listitem="@layout/item_dashboard_location"
+                />
+
+            <com.martinwalls.nea.ui.dashboard.BarChartView
+                android:id="@+id/graph"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                />
+        </LinearLayout>
     </ScrollView>
 
     <TextView
