--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -22,9 +22,9 @@
         <item name="dividerColor">@color/medium_dark_grey</item>
 
         <!-- Dashboard graph -->
-        <item name="dashboardGraphBarColor">@color/dashboard_graph_bar</item>
-        <item name="dashboardTooltipColor">@color/dashboard_tooltip</item>
-        <item name="dashboardTooltipTextColor">@color/dark_grey</item>
+        <item name="dashboardGraphAmountBarColor">@color/dashboard_graph_bar</item>
+        <item name="dashboardAmountTooltipColor">@color/dashboard_tooltip</item>
+        <item name="dashboardAmountTooltipTextColor">@color/dark_grey</item>
         <item name="dashboardGraphBarInnerTextColor">@color/dark_grey</item>
         <item name="dashboardGraphBarOuterTextColor">?textColorPrimary</item>
 
