--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -33,7 +33,8 @@
     <string name="pref_exchange_currency_primary">exchange_currency_primary</string>
     <string name="pref_exchange_currency_secondary">exchange_currency_secondary</string>
 
-
-    <!-- FOR TESTING -->
-    <string name="test_pref_reminder_set">reminder_set</string>
+    <string name="pref_enable_notifications">enable_notifications</string>
+    <string name="pref_reminder_time">reminder_time</string>
+    <string name="pref_reminder_time_hr">reminder_time_hr</string>
+    <string name="pref_reminder_time_min">reminder_time_min</string>
 </resources>
